--- a/index.html
+++ b/index.html
@@ -57,6 +57,9 @@
               <li class="nav-item">
                 <a href="" class="nav-link">Entrar</a>
               </li>
+              <li class="nav-item">
+                <a href="./letra-musica.html" class="nav-link">Letras de músicas</a>
+              </li>
             </ul>
           </div>
 
